<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegree_apps_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="scores">Scores</string>
    <string name="library_app">Library App</string>
    <string name="library">Library</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="reader">XYZ Reader</string>
    <string name="capstone">Capstone : My Own App</string>
    <string name="capstone_title">Capstone</string>
    <string name="default_click_message">This button will launch my </string>
</resources>
