<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main"
        android:background="#ffffff"
        android:orientation="vertical">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nanodegree_apps_title"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spotify_streamer"
                android:id="@+id/spotify_streamer"
                android:background="#F08C35"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:gravity="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scores_app"
                android:id="@+id/scores_app"
                android:background="#F08C35"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:gravity="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/library_app"
                android:id="@+id/library_app"
                android:background="#F08C35"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:gravity="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_it_bigger"
                android:id="@+id/build_it_bigger"
                android:background="#F08C35"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:gravity="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reader"
                android:id="@+id/reader"
                android:background="#F08C35"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:gravity="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capstone"
                android:id="@+id/capstone"
                android:background="#2196f3"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
